[package]
name = "colourful-logger"
license = "MIT"
version = "2.0.0"
edition = "2021"
keywords = ["logging", "minimal", "logger", "colourful-logging"]
categories = ["development-tools::debugging", "development-tools::testing"]
description = "A minimal colourful logger for Rust"
repository = "https://github.com/devtomos/colourful-logger"

[dependencies]
colored = "2"
pad = "0.1"
chrono = "0.4.38"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.3"
backtrace = "0.3"
regex = "1.11.1"